--- a/Extract news data.ipynb
+++ b/Extract news data.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e96d5640",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,36 +10,33 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "2df1064d",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data from Gdelt database, csv was extracted using Google Big Query "
+    "## Data from Gdelt database, csv was extracted using Google Big Query "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5f1ff0d9",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/mac/opt/anaconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3444: DtypeWarning: Columns (21,55) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "/Users/abdeslamguessous/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3343: DtypeWarning: Columns (21,55) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"/Users/mac/Downloads/bq-results-20221023-133958-1666532438499.csv\")"
+    "df = pd.read_csv(\"newsdata_gdelt (1).csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "db057bc9",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +448,7 @@
        "[220877 rows x 61 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,8 +458,179 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SOURCEURL    http://noticias.lainformacion.com/economia-neg...\n",
+       "Name: 3, dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_SOURCEURL.loc[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# String processing\n",
+    "\n",
+    "lst = []\n",
+    "for i in range(len(df)):\n",
+    "    str_input = df.SOURCEURL[i]\n",
+    "    if str_input[-1]!= '/':\n",
+    "        str_out = str_input.split('/')[-1].replace('-',' ').replace('_',' ')\n",
+    "    else:\n",
+    "        str_out = str_input.split('/')[-2].replace('-',' ').replace('_',' ')\n",
+    "    lst.append(str_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_URL_prep = pd.DataFrame (lst, columns = ['URL Preprocessed'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_out = df\n",
+    "df_out['URL Preprocessed'] = df_URL_prep['URL Preprocessed']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_SOURCEURL = pd.DataFrame(df.SOURCEURL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SOURCEURL    http://www.sabah.com.tr/ekonomi/2015/11/12/san...\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_SOURCEURL.loc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(pd.DataFrame(df_SOURCEURL) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(10).to_csv('extract_newsdata_gdelt.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    http://www.sabah.com.tr/ekonomi/2015/11/12/san...\n",
+       "1    http://sputniknews.com/europe/20160426/1038600...\n",
+       "2    http://www.financialbuzz.com/bitcoin-exchange-...\n",
+       "3    http://noticias.lainformacion.com/economia-neg...\n",
+       "4    http://azertag.az/xeber/Noyabrda_BTC_kemeri_il...\n",
+       "Name: SOURCEURL, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['SOURCEURL'].head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_out.to_csv('Extract_news_data_gdelt Preprocessed.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "3191f927",
    "metadata": {},
    "source": [
     "# ABC dataset"
@@ -472,7 +639,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "665c5eb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +648,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ff4c579a",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +765,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "51b14665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +774,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9bb08391",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +891,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "190e900b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +900,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7d966b6d",
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +983,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e836c844",
    "metadata": {},
    "source": [
     "# huff post dataset"
@@ -831,7 +991,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bfd6e7c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +1000,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f9b62817",
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1204,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "46eb66d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1213,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3c9e2e22",
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1414,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6b8776c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1423,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9c507900",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1494,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18aa83ed",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1348,7 +1501,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1362,7 +1515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
