--- a/twitter_v2_example.ipynb
+++ b/twitter_v2_example.ipynb
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -914,9 +914,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start Time 2022-12-04 21:57:47.135376\n",
-      "We are processing day  8 of September\n",
-      "Dates ,  2021-09-08T00:00:00Z 2021-09-09T00:00:00Z\n",
+      "Start Time 2022-12-05 16:27:34.848733\n",
+      "We are processing day  19 of October\n",
+      "Dates ,  2021-10-19T00:00:00Z 2021-10-20T00:00:00Z\n",
       "4 - 0\n",
       "4 - 10\n",
       "4 - 20\n",
@@ -928,291 +928,12 @@
       "4 - 80\n",
       "4 - 90\n",
       "4 - 100\n",
-      "4 - 110\n",
-      "4 - 120\n",
-      "We are processing day  9 of September\n",
-      "Dates ,  2021-09-09T00:00:00Z 2021-09-10T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "We are processing day  10 of September\n",
-      "Dates ,  2021-09-10T00:00:00Z 2021-09-11T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "File Saved 22_25_54\n",
-      "We are processing day  11 of September\n",
-      "Dates ,  2021-09-11T00:00:00Z 2021-09-12T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "We are processing day  12 of September\n",
-      "Dates ,  2021-09-12T00:00:00Z 2021-09-13T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "We are processing day  13 of September\n",
-      "Dates ,  2021-09-13T00:00:00Z 2021-09-14T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "4 - 110\n",
-      "File Saved 22_50_35\n",
-      "We are processing day  14 of September\n",
-      "Dates ,  2021-09-14T00:00:00Z 2021-09-15T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "We are processing day  15 of September\n",
-      "Dates ,  2021-09-15T00:00:00Z 2021-09-16T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "4 - 110\n",
-      "We are processing day  16 of September\n",
-      "Dates ,  2021-09-16T00:00:00Z 2021-09-17T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "File Saved 23_17_43\n",
-      "We are processing day  17 of September\n",
-      "Dates ,  2021-09-17T00:00:00Z 2021-09-18T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "We are processing day  18 of September\n",
-      "Dates ,  2021-09-18T00:00:00Z 2021-09-19T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "We are processing day  19 of September\n",
-      "Dates ,  2021-09-19T00:00:00Z 2021-09-20T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "File Saved 23_39_42\n",
-      "We are processing day  20 of September\n",
-      "Dates ,  2021-09-20T00:00:00Z 2021-09-21T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "4 - 110\n",
-      "We are processing day  21 of September\n",
-      "Dates ,  2021-09-21T00:00:00Z 2021-09-22T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "4 - 110\n",
-      "We are processing day  22 of September\n",
-      "Dates ,  2021-09-22T00:00:00Z 2021-09-23T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "File Saved 00_08_07\n",
-      "We are processing day  23 of September\n",
-      "Dates ,  2021-09-23T00:00:00Z 2021-09-24T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "We are processing day  24 of September\n",
-      "Dates ,  2021-09-24T00:00:00Z 2021-09-25T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "4 - 110\n",
-      "4 - 120\n",
-      "We are processing day  25 of September\n",
-      "Dates ,  2021-09-25T00:00:00Z 2021-09-26T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "File Saved 00_34_14\n",
-      "We are processing day  26 of September\n",
-      "Dates ,  2021-09-26T00:00:00Z 2021-09-27T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "We are processing day  27 of September\n",
-      "Dates ,  2021-09-27T00:00:00Z 2021-09-28T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "We are processing day  28 of September\n",
-      "Dates ,  2021-09-28T00:00:00Z 2021-09-29T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "File Saved 00_59_06\n",
-      "We are processing day  29 of September\n",
-      "Dates ,  2021-09-29T00:00:00Z 2021-09-30T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "4 - 110\n",
-      "4 - 120\n",
-      "4 - 130\n",
-      "4 - 140\n",
-      "End Runing Time 2022-12-05 01:10:52.640566\n"
+      "4 - 110\n"
      ]
     }
    ],
    "source": [
-    "output = main_function(8,30)"
+    "output = main_function(19,31)"
    ]
   },
   {
@@ -1222,18 +943,6 @@
    "outputs": [],
    "source": [
     "/Users/abdeslamguessous/Documents/GitHub/SemesterProject\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#output2.to_csv(folder_path +'/01_09_21TO11_09_V2.csv')\n",
-    "#st = datetime.now().strftime(\"%H_%M_%S\")\n",
-    "\n",
-    "#output.to_csv('Extractions_folder/Run_September_21_'+ st+'.csv')"
    ]
   },
   {
@@ -1269,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +989,7 @@
     "    print('Start Time', datetime.now())\n",
     "    dfs =[]\n",
     "    for iterator in np.arange(start_day, end_day,1):\n",
-    "        print('We are processing day ', iterator ,'of September')\n",
+    "        print('We are processing day ', iterator ,'of October')\n",
     "        date_start_query, date_end_query = dates_preprocessor( iterator, iterator+1)\n",
     "        tweets = run_query(date_start_query, date_end_query)\n",
     "        df = convert_dict_to_df (tweets)\n",
@@ -1291,7 +1000,7 @@
     "    \n",
     "        if len(dfs)> 100000 :\n",
     "            st = datetime.now().strftime(\"%H_%M_%S\")\n",
-    "            dfs.to_csv('Extractions_folder/Run_September_21_'+ st+'.csv')\n",
+    "            dfs.to_csv('Extractions_folder/Run_October21_'+ st + str(iterator)+ '_'+ '.csv')\n",
     "            print('File Saved', st)\n",
     "            dfs = []\n",
     "    \n",
@@ -1301,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,8 +1024,8 @@
     "    if len((iterator_end)) ==1:\n",
     "           iterator_end = '0' +iterator_end\n",
     "            \n",
-    "    date_start_query = '2021-09-' + iterator_start +'T00:00:00Z'\n",
-    "    date_end_query =   '2021-09-' + iterator_end +'T00:00:00Z'\n",
+    "    date_start_query = '2021-10-' + iterator_start +'T00:00:00Z'\n",
+    "    date_end_query =   '2021-10-' + iterator_end +'T00:00:00Z'\n",
     "\n",
     "    print('Dates , ', date_start_query, date_end_query)\n",
     "    return date_start_query, date_end_query"
@@ -1324,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
