Nouvelle vers de twitter_v2
Nouvelle version du code avec les features de followings vs followers and listed for each user

--- a/twitter_v2_example.ipynb
+++ b/twitter_v2_example.ipynb
@@ -914,26 +914,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start Time 2022-12-05 16:27:34.848733\n",
-      "We are processing day  19 of October\n",
-      "Dates ,  2021-10-19T00:00:00Z 2021-10-20T00:00:00Z\n",
-      "4 - 0\n",
-      "4 - 10\n",
-      "4 - 20\n",
-      "4 - 30\n",
-      "4 - 40\n",
-      "4 - 50\n",
-      "4 - 60\n",
-      "4 - 70\n",
-      "4 - 80\n",
-      "4 - 90\n",
-      "4 - 100\n",
-      "4 - 110\n"
+      "Start Time 2022-12-05 16:59:11.908161\n",
+      "We are processing day  1 of September\n",
+      "Dates ,  2021-09-01T00:00:00Z 2021-09-02T00:00:00Z\n",
+      "4 - 0\n"
      ]
     }
    ],
    "source": [
-    "output = main_function(19,31)"
+    "output = main_function(1,15)"
    ]
   },
   {
@@ -978,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +978,7 @@
     "    print('Start Time', datetime.now())\n",
     "    dfs =[]\n",
     "    for iterator in np.arange(start_day, end_day,1):\n",
-    "        print('We are processing day ', iterator ,'of October')\n",
+    "        print('We are processing day ', iterator ,'of September')\n",
     "        date_start_query, date_end_query = dates_preprocessor( iterator, iterator+1)\n",
     "        tweets = run_query(date_start_query, date_end_query)\n",
     "        df = convert_dict_to_df (tweets)\n",
@@ -1010,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,8 +1013,8 @@
     "    if len((iterator_end)) ==1:\n",
     "           iterator_end = '0' +iterator_end\n",
     "            \n",
-    "    date_start_query = '2021-10-' + iterator_start +'T00:00:00Z'\n",
-    "    date_end_query =   '2021-10-' + iterator_end +'T00:00:00Z'\n",
+    "    date_start_query = '2021-09-' + iterator_start +'T00:00:00Z'\n",
+    "    date_end_query =   '2021-09-' + iterator_end +'T00:00:00Z'\n",
     "\n",
     "    print('Dates , ', date_start_query, date_end_query)\n",
     "    return date_start_query, date_end_query"
@@ -1033,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,6 +1085,8 @@
     "                       'username': author_info['username'],\n",
     "                       'author_followers': author_info['followers'],\n",
     "                       'author_tweets': author_info['tweets'],\n",
+    "                        'author_following': author_info['following'],\n",
+    "                       'author_listed': author_info['listed'],\n",
     "                       'author_description': author_info['description'],\n",
     "                       'author_location': author_info['location'],\n",
     "                       'author_private' : author_info['private_account'],\n",
@@ -1129,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1134,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
